--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@gsap/react": "^2.1.2",
 		"@mui/icons-material": "^6.4.8",
 		"@mui/material": "^6.4.8",
 		"@mui/x-date-pickers": "^7.27.3",
@@ -21,7 +22,9 @@
 		"@vercel/speed-insights": "^1.0.10",
 		"axios": "^1.5.0",
 		"gsap": "^3.14.2",
+		"install": "^0.13.0",
 		"jwt-decode": "^4.0.0",
+		"npm": "^11.10.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
