--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
 		"gsap": "^3.14.2",
 		"install": "^0.13.0",
 		"jwt-decode": "^4.0.0",
+		"lenis": "^1.3.17",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
